--- a/Lab1/CSCI410_lab1_Linear_Regression.ipynb
+++ b/Lab1/CSCI410_lab1_Linear_Regression.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOThpm0Qhia6y9JzdDo9SpA",
+      "authorship_tag": "ABX9TyNyBm1Nez0w6BQZMDwcNArx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,35 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/akomaty/CSCI410-lab/blob/master/CSCI410_lab1_Linear_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lXHKKZGLvvL5"
+      },
+      "source": [
+        "# Copyright Information"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "zxVj_bhpvwRp"
+      },
+      "source": [
+        "#@title\n",
+        "# Copyright 2021 - All Rights Reserved.\n",
+        "# Idiap Research Institute - Ecole Polytechnique Fédérale de Lausanne EPFL\n",
+        "# Sébastien Marcel and André Anjos.\n",
+        "# CSCI410-University of Sciences and Arts in Lebanon - USAL.\n",
+        "# Ali Komaty.\n",
+        "# © FSPR: Fundamentals in Statistical Pattern Recognition\n",
+        "# https://www.idiap.ch/~marcel/professional/EPFL_FSPR_2019.html\n",
+        "# © USAL CSCI410: Introduction to Machine Learning"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
