--- a/Lab1/CSCI410_lab1_Linear_Regression_Sol.ipynb
+++ b/Lab1/CSCI410_lab1_Linear_Regression_Sol.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO6h0YhVR7qL93s9X+FcrzI",
+      "authorship_tag": "ABX9TyMJsgcgtYsrKghkXr9A104h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/akomaty/CSCI410-lab/blob/master/CSCI410_lab1_Linear_Regression_Sol.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/akomaty/CSCI410-lab/blob/master/Lab1/CSCI410_lab1_Linear_Regression_Sol.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -35,6 +35,18 @@
         "id": "53WwFzFHspPH"
       },
       "source": [
+        "<table align=\"center\">\n",
+        "  <td align=\"center\"><a target=\"_blank\" href=\"https://edu.epfl.ch/coursebook/en/fundamentals-in-statistical-pattern-recognition-EE-612\">\n",
+        "        <img src=\"https://www.epfl.ch/about/overview/wp-content/uploads/2020/07/logo-epfl-1024x576.png\" style=\"padding-bottom:5px;\" width=\"100\" height=\"56\"/>\n",
+        "      Visit the EPFL course page</a></td>\n",
+        "  <td align=\"center\"><a target=\"_blank\" href=\"https://www.usal.edu.lb/\">\n",
+        "        <img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxzelk0TseYtdpMaTooDotsxARzYBB_ukJU9KAccb1tST55RDdd_4CLETiNG_qk3fDSRM&usqp=CAU\" style=\"padding-bottom:5px;\" width=\"75\" height=\"75\"/>\n",
+        "      Visit the USAL page</a></td>\n",
+        " \n",
+        "  <td align=\"center\"><a target=\"_blank\" href=\"https://github.com/akomaty/CSCI410-lab/blob/master/Lab1/CSCI410_lab1_Linear_Regression.ipynb\">\n",
+        "        <img src=\"https://i.ibb.co/xfJbPmL/github.png\"  height=\"70px\" style=\"padding-bottom:5px;\"  />View Source on GitHub</a></td>\n",
+        "</table>\n",
+        "\n",
         "# Copyright Information"
       ]
     },
