--- a/Lab1/CSCI410_lab1_Linear_Regression.ipynb
+++ b/Lab1/CSCI410_lab1_Linear_Regression.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNyBm1Nez0w6BQZMDwcNArx",
+      "authorship_tag": "ABX9TyPxJgiXLbi1ocHLOFIi2aF8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/akomaty/CSCI410-lab/blob/master/CSCI410_lab1_Linear_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/akomaty/CSCI410-lab/blob/master/Lab1/CSCI410_lab1_Linear_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -35,6 +35,18 @@
         "id": "lXHKKZGLvvL5"
       },
       "source": [
+        "<table align=\"center\">\n",
+        "  <td align=\"center\"><a target=\"_blank\" href=\"https://edu.epfl.ch/coursebook/en/fundamentals-in-statistical-pattern-recognition-EE-612\">\n",
+        "        <img src=\"https://www.epfl.ch/about/overview/wp-content/uploads/2020/07/logo-epfl-1024x576.png\" style=\"padding-bottom:5px;\" width=\"100\" height=\"56\"/>\n",
+        "      Visit the EPFL course page</a></td>\n",
+        "  <td align=\"center\"><a target=\"_blank\" href=\"https://www.usal.edu.lb/\">\n",
+        "        <img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxzelk0TseYtdpMaTooDotsxARzYBB_ukJU9KAccb1tST55RDdd_4CLETiNG_qk3fDSRM&usqp=CAU\" style=\"padding-bottom:5px;\" width=\"75\" height=\"75\"/>\n",
+        "      Visit the USAL page</a></td>\n",
+        " \n",
+        "  <td align=\"center\"><a target=\"_blank\" href=\"https://github.com/akomaty/CSCI410-lab/blob/master/Lab1/CSCI410_lab1_Linear_Regression.ipynb\">\n",
+        "        <img src=\"https://i.ibb.co/xfJbPmL/github.png\"  height=\"70px\" style=\"padding-bottom:5px;\"  />View Source on GitHub</a></td>\n",
+        "</table>\n",
+        "\n",
         "# Copyright Information"
       ]
     },
@@ -99,7 +111,7 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn import datasets"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +133,7 @@
         "X, y = datasets.load_diabetes(return_X_y = True)\n",
         "#X = datasets.load_diabetes(return_X_y = False)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +148,7 @@
       "source": [
         "print(\"The number of samples in the dataset is {}\".format(len(X)))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +171,7 @@
       "source": [
         "print(\"The number of features is {}\".format(len(X[0])))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +230,7 @@
         "plt.xlabel(\"Body Mass Index\")\n",
         "plt.ylabel(\"Disease Progression\")"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +289,7 @@
         "print(\"The size of the training data is {}\".format(len(X_train)))\n",
         "print(\"The size of the test data is {}\".format(len(X_test)))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,7 +320,7 @@
         "X_train = X_train # TODO: Select only the second feature\n",
         "X_test = X_test # TODO: Select only the second feature"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -363,7 +375,7 @@
         "  # TODO: implement the function that returns h, given x and theta.\n",
         "  return 0"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -407,7 +419,7 @@
         "  J_ /= (2*n)\n",
         "  return J_\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -449,7 +461,7 @@
         "  dJ0_ /= n\n",
         "  return dJ0_"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -491,7 +503,7 @@
         "  dJ1_ /= n\n",
         "  return dJ1_"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -531,7 +543,7 @@
         "# Define the learning rate, make sure to fine tune this parameter as you test your algorithm.\n",
         "alpha = 0.01"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -565,7 +577,7 @@
         "Jtest[0] = J(X_test, y_test, theta)\n",
         "print('%03d/%03d: J_train = %.8e | J_devel = %8e' % (0, max_iter, Jtrain[0], Jtest[0]))"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -611,7 +623,7 @@
         "#theta[1] /= X_std\n",
         "print('Final parameters (theta): %s' % theta)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,7 +662,7 @@
         "plt.grid()\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
