--- a/Lab1/CSCI410_lab1_Linear_Regression_part_I.ipynb
+++ b/Lab1/CSCI410_lab1_Linear_Regression_part_I.ipynb
@@ -3,11 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "CSCI410-lab1-Linear-Regression.ipynb",
+      "name": "CSCI410-lab1-Linear-Regression-part-I.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPxJgiXLbi1ocHLOFIi2aF8",
+      "authorship_tag": "ABX9TyNLCuNnc4UUbubcbFnV6AcW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/akomaty/CSCI410-lab/blob/master/Lab1/CSCI410_lab1_Linear_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/akomaty/CSCI410-lab/blob/master/Lab1/CSCI410_lab1_Linear_Regression_part_I.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,7 +37,7 @@
       "source": [
         "<table align=\"center\">\n",
         "  <td align=\"center\"><a target=\"_blank\" href=\"https://edu.epfl.ch/coursebook/en/fundamentals-in-statistical-pattern-recognition-EE-612\">\n",
-        "        <img src=\"https://www.epfl.ch/about/overview/wp-content/uploads/2020/07/logo-epfl-1024x576.png\" style=\"padding-bottom:5px;\" width=\"100\" height=\"56\"/>\n",
+        "        <img src=\"https://www.idiap.ch/en/about/files/idiap-logo-e-bleu-noir-pantone.png\" style=\"padding-bottom:5px;\" width=\"100\" height=\"30\"/>\n",
         "      Visit the EPFL course page</a></td>\n",
         "  <td align=\"center\"><a target=\"_blank\" href=\"https://www.usal.edu.lb/\">\n",
         "        <img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxzelk0TseYtdpMaTooDotsxARzYBB_ukJU9KAccb1tST55RDdd_4CLETiNG_qk3fDSRM&usqp=CAU\" style=\"padding-bottom:5px;\" width=\"75\" height=\"75\"/>\n",
@@ -53,16 +53,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "zxVj_bhpvwRp"
+        "id": "zxVj_bhpvwRp",
+        "cellView": "form"
       },
       "source": [
         "#@title\n",
         "# Copyright 2021 - All Rights Reserved.\n",
         "# Idiap Research Institute - Ecole Polytechnique Fédérale de Lausanne EPFL\n",
-        "# Sébastien Marcel and André Anjos.\n",
-        "# CSCI410-University of Sciences and Arts in Lebanon - USAL.\n",
-        "# Ali Komaty.\n",
+        "# Tiago de Freitas Pereira https://www.idiap.ch/~tpereira/\n",
+        "# André Anjos https://andreanjos.org/\n",
+        "# Sébastien Marcel https://www.idiap.ch/~marcel/professional/Welcome.html \n",
+        "# Ali Komaty - CSCI410-University of Sciences and Arts in Lebanon - USAL.\n",
         "# © FSPR: Fundamentals in Statistical Pattern Recognition\n",
         "# https://www.idiap.ch/~marcel/professional/EPFL_FSPR_2019.html\n",
         "# © USAL CSCI410: Introduction to Machine Learning"
