--- a/Lab1/CSCI410_lab1_Linear_Regression_part_I.ipynb
+++ b/Lab1/CSCI410_lab1_Linear_Regression_part_I.ipynb
@@ -389,7 +389,7 @@
         "Now we are going to implement the (unvectorized) cost $J$ for the univariate linear regression model given X, y and $\\theta$.\n",
         "  The cost for the linear regression model is defined as: \n",
         "  \n",
-        "  $J(\\theta_0, \\theta_1) = \\frac{1}{2n}\\sum_{i=0}^{n-1} (h_\\theta(x^{(i)} - y^{(i)})^2$\n",
+        "  $J(\\theta_0, \\theta_1) = \\frac{1}{2n}\\sum_{i=0}^{n-1} (h_\\theta(x^{(i)}) - y^{(i)})^2$\n",
         "\n",
         "The parameters are: \n",
         "\n",
@@ -435,7 +435,7 @@
         "\n",
         "As derived in the course, this partial derivative is:\n",
         "\n",
-        "$\\frac{\\partial}{\\partial \\theta_0}J(\\theta_0, \\theta_1) = \\frac{1}{n}\\sum_{i=0}^{n-1} (h_\\theta(x^{(i)} - y^{(i)})$\n",
+        "$\\frac{\\partial}{\\partial \\theta_0}J(\\theta_0, \\theta_1) = \\frac{1}{n}\\sum_{i=0}^{n-1} (h_\\theta(x^{(i)}) - y^{(i)})$\n",
         "  \n",
         "The function parameters are:\n",
         "\n",
