--- a/Lab1/CSCI410_lab1_Linear_Regression_part_I.ipynb
+++ b/Lab1/CSCI410_lab1_Linear_Regression_part_I.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNLCuNnc4UUbubcbFnV6AcW",
+      "authorship_tag": "ABX9TyOhk9h0lYUrGFu+deFMVHOI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "        <img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxzelk0TseYtdpMaTooDotsxARzYBB_ukJU9KAccb1tST55RDdd_4CLETiNG_qk3fDSRM&usqp=CAU\" style=\"padding-bottom:5px;\" width=\"75\" height=\"75\"/>\n",
         "      Visit the USAL page</a></td>\n",
         " \n",
-        "  <td align=\"center\"><a target=\"_blank\" href=\"https://github.com/akomaty/CSCI410-lab/blob/master/Lab1/CSCI410_lab1_Linear_Regression.ipynb\">\n",
+        "  <td align=\"center\"><a target=\"_blank\" href=\"https://github.com/akomaty/CSCI410-lab.git\">\n",
         "        <img src=\"https://i.ibb.co/xfJbPmL/github.png\"  height=\"70px\" style=\"padding-bottom:5px;\"  />View Source on GitHub</a></td>\n",
         "</table>\n",
         "\n",
