Corrected the formulas

--- a/Lab1/CSCI410_lab1_Linear_Regression_part_I.ipynb
+++ b/Lab1/CSCI410_lab1_Linear_Regression_part_I.ipynb
@@ -7,7 +7,6 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOhk9h0lYUrGFu+deFMVHOI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/akomaty/CSCI410-lab/blob/master/Lab1/CSCI410_lab1_Linear_Regression_part_I.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/akomaty/CSCI410-lab/blob/master/CSCI410_lab1_Linear_Regression_part_I.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -389,7 +388,7 @@
         "Now we are going to implement the (unvectorized) cost $J$ for the univariate linear regression model given X, y and $\\theta$.\n",
         "  The cost for the linear regression model is defined as: \n",
         "  \n",
-        "  $J(\\theta_0, \\theta_1) = \\frac{1}{2n}\\sum_{i=0}^{n-1} (h_\\theta(x^{(i)} - y^{(i)})^2$\n",
+        "  $J(\\theta_0, \\theta_1) = \\frac{1}{2n}\\sum_{i=0}^{n-1} \\Big(h_\\theta(x^{(i)}) - y^{(i)}\\Big)^2$\n",
         "\n",
         "The parameters are: \n",
         "\n",
@@ -435,7 +434,7 @@
         "\n",
         "As derived in the course, this partial derivative is:\n",
         "\n",
-        "$\\frac{\\partial}{\\partial \\theta_0}J(\\theta_0, \\theta_1) = \\frac{1}{n}\\sum_{i=0}^{n-1} (h_\\theta(x^{(i)} - y^{(i)})$\n",
+        "$\\frac{\\partial}{\\partial \\theta_0}J(\\theta_0, \\theta_1) = \\frac{1}{n}\\sum_{i=0}^{n-1} \\Big(h_\\theta(x^{(i)}) - y^{(i)}\\Big)$\n",
         "  \n",
         "The function parameters are:\n",
         "\n",
@@ -477,7 +476,7 @@
         "\n",
         "As derived in the course, this partial derivative is:\n",
         "\n",
-        "$\\frac{\\partial}{\\partial \\theta_1}J(\\theta_0, \\theta_1) = \\frac{1}{n}\\sum_{i=0}^{n-1} (h_\\theta(x^{(i)} - y^{(i)})x^{(i)})$\n",
+        "$\\frac{\\partial}{\\partial \\theta_1}J(\\theta_0, \\theta_1) = \\frac{1}{n}\\sum_{i=0}^{n-1} \\Big(h_\\theta(x^{(i)}) - y^{(i)}\\Big)x^{(i)}$\n",
         "  \n",
         "The function parameters are:\n",
         "\n",
